--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,33 +33,33 @@ services:
     networks:
       - zocial-network
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    container_name: zocial-zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2182:2181"
-    networks:
-      - zocial-network
-
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    container_name: zocial-kafka
-    depends_on:
-      - zookeeper
-    ports:
-      - "9093:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    networks:
-      - zocial-network
+#  zookeeper:
+#    image: confluentinc/cp-zookeeper:7.4.0
+#    container_name: zocial-zookeeper
+#    environment:
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#      ZOOKEEPER_TICK_TIME: 2000
+#    ports:
+#      - "2182:2181"
+#    networks:
+#      - zocial-network
+#
+#  kafka:
+#    image: confluentinc/cp-kafka:7.4.0
+#    container_name: zocial-kafka
+#    depends_on:
+#      - zookeeper
+#    ports:
+#      - "9093:9092"
+#    environment:
+#      KAFKA_BROKER_ID: 1
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#    networks:
+#      - zocial-network
 
   keycloak:
     image: quay.io/keycloak/keycloak:22.0
@@ -103,9 +103,9 @@ services:
 #    networks:
 #      - zocial-network
 
-  eureka-server:
+  eureka-service:
     build:
-      context: ./eureka-server
+      context: ./eureka-service
       dockerfile: Dockerfile
     container_name: zocial-eureka
     ports:
