--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "libphonenumber-js": "^1.11.19",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-international-phone": "^4.5.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
