--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,13 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.3",
+    "@mui/x-data-grid": "^7.23.6",
+    "@mui/x-date-pickers": "^7.26.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.66.3",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "libphonenumber-js": "^1.11.19",
     "react": "^19.0.0",
+    "react-query": "^3.39.3",
     "react-dom": "^19.0.0",
     "react-international-phone": "^4.5.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-redux": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
